# dbutils-batch-query

./: .copier-answers.yml  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements-exact.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: python-test.yml
dbutils_batch_query/: __init__.py  cli.py  data_import.py  example_analysis.py  model_query.py  prompts.py
dbutils_batch_query/notebooks/: analysis_notebook.ipynb
dbutils_batch_query/utils/: file_utils.py  secrets.py
doc_src/: Makefile
doc_src/source/: build_reqs.py  conf.py  index.rst
doc_src/source/reference/: index_api.rst  prompts.rst
docs/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/dbutils_batch_query/: model_query.html  prompts.html
docs/_modules/dbutils_batch_query/utils/: file_utils.html
docs/_sources/reference/: file_utils.rst.txt  index_api.rst.txt  model_query.rst.txt
docs/_static/: documentation_options.js
docs/reference/: file_utils.html  index_api.html  model_query.html  prompts.html
tests/: conftest.py  test_batch.py  test_package.py
